# potenup_python_study

inregular_data_practice/: .env  BeaurifulSoup.ipynb  BeautifulSoup2.ipynb  OpenAPI활용.ipynb  Selenium.ipynb  Selenium2.ipynb  machineLearning_preview.ipynb  main.py  naver_news.ipynb  pyproject.toml  selenium_naver_news.ipynb
machine_learning/: CDA.ipynb  machineLearning_preview.ipynb  pyproject.toml
numpy_practice/: pandas.ipynb  pyproject.toml
visualization_practice/: main.py  practice.ipynb  pyproject.toml  데이터분석_따릉이.ipynb  데이터분석_정리.md
work/: 01_파이썬_기초_문법(변수,자료형)_blank.ipynb  02_파이썬_기초_문법(제어문)_blank.ipynb  03_파이썬_기초_문법(함수)_blank.ipynb  04_실습.ipynb  main.py  pyproject.toml
work/data/: data_review.txt  test.txt
