[project]
name = "visualization-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "jupyter>=1.1.1",
    "koreanize-matplotlib>=0.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "seaborn>=0.13.2",
]
